Adición del envío de correo y autenticación

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 BASE_NOMBRE = restaurante
 BASE_USUARIO = root
-BASE_CONTRASENA =
+BASE_CONTRASENA = 
 BASE_SERVIDOR = localhost
 BASE_PUERTO = 3306
+CORREO_SERVICIO = smtp.gmail.com
+CORREO_PORT = 465
+APP_CORREO = restarurantecomerico@gmail.com
+CORREO_CONTRASENA = mvdyesfhqolivmxb
