--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BASE_NOMBRE = restaurante
 BASE_USUARIO = root
-BASE_CONTRASENA = 
+BASE_CONTRASENA = 123456
 BASE_SERVIDOR = localhost
 BASE_PUERTO = 3306
 CORREO_SERVICIO = smtp.gmail.com
